@@ -22,14 +22,14 @@
  */
 
 /*
- * @test id=ZDebug
+ * @test id=ZSinglegenDebug
  * @key randomness
  * @bug 8059022 8271855
  * @modules java.base/jdk.internal.misc:+open
  * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
- * @requires vm.gc.Z & vm.debug
+ * @requires vm.gc.ZSinglegen & vm.debug
  * @library /test/lib
- * @run main/othervm -XX:+UseZGC
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational
  *                   -XX:+UnlockDiagnosticVMOptions
  *                   -XX:+ZVerifyOops -XX:ZCollectionInterval=1
  *                   -XX:-CreateCoredumpOnCrash
@@ -38,14 +38,46 @@
  */
 
 /*
- * @test id=Z
+ * @test id=ZSinglegen
  * @key randomness
  * @bug 8059022 8271855
  * @modules java.base/jdk.internal.misc:+open
  * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
- * @requires vm.gc.Z & !vm.debug
+ * @requires vm.gc.ZSinglegen & !vm.debug
  * @library /test/lib
- * @run main/othervm -XX:+UseZGC
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=ZGenerationalDebug
+ * @key randomness
+ * @bug 8059022 8271855
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZGenerational & vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+ZVerifyOops -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=ZGenerational
+ * @key randomness
+ * @bug 8059022 8271855
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZGenerational & !vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational
  *                   -XX:+UnlockDiagnosticVMOptions
  *                   -XX:ZCollectionInterval=1
  *                   -XX:-CreateCoredumpOnCrash
